<resources>
    <string name="app_name">AlterApple Music Player</string>

    <string name="message_authorisation">Authorise to your Apple account to gain full access to your music library</string>
    <string name="button_authorisation">Login</string>
    <string name="developer_token">eyJhbGciOiJFUzI1NiIsImtpZCI6IllGMzcyS0Y2RlMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJLQTlLN0JNSDM4IiwiaWF0IjoxNjcyMjQ2OTcxLCJleHAiOjE2NzQ4NzQ5NzF9.TC2D-4kFCiQiDw_Ce882Z3IuJLwF2p8G7oAvI7Nhpb5uNSKtMbTylofpF2e70a_CO8VqEMXPOaaQF4d9gomqWw</string>

    <string name="playback_notification_channel_name">Playback</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_previous">Previous</string>
    <string name="notification_next">Next</string>

    <!-- Home Fragment -->
    <string name="my_music">My Music</string>
    <string name="search">Search</string>
    <string name="top">Top</string>
    <string name="settings">Settings</string>
    <string name="placeholder_work_in_progress">Work in progress</string>

    <!-- Search Fragment -->
    <string name="hint_search">Search, Albums, Lyrics and More</string>

    <!-- Search Fragment: Result Categories -->
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="more">more</string>
    <string name="see_all">See all</string>

    <!-- My Music Fragment -->
    <string name="playlists">Playlists</string>
    <string name="downloaded_tracks">Downloaded Tracks</string>
    <string name="tracks_on_my_device">Tracks on my device</string>
    <string name="recently_played">You recently listened to</string>
    <string name="stations">Stations</string>

    <!-- Album Details Fragment -->
    <string name="add">Add</string>
    <string name="more_by">More by %s</string>
</resources>
