<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_music"
        android:icon="@drawable/ic_my_music"
        android:state_checked="true"
        android:title="@string/my_music" />

    <item
        android:id="@+id/top"
        android:icon="@drawable/ic_top_rated"
        android:state_checked="false"
        android:title="@string/top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:state_checked="false"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:state_checked="false"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>